responsive home page

--- a/index.html
+++ b/index.html
@@ -52,63 +52,61 @@
                     </div>
                 </div>
                 <div class="hero__products">
-                    <div class="container">
-                        <div class="hero__cards">
-                            <div class="hero__card">
-                                <img src="img/products/hero-product1.png" alt="" class="hero_card_img">
-                                <div class="hero_card_content">
-                                    <h3 class="hero_card_title">FIDO2 Keys</h3>
-                                    <p class="hero_card_text">Token2 is a verified Microsoft-compatible FIDO2 security
-                                        key
-                                        vendor</p>
-                                    <p class="hero_card_desc">All Token2 FIDO2 security keys listed on this page are
-                                        verified by
-                                        Microsoft as compatible with the Azure Active Directory passwordless experience.
-                                    </p>
-                                    <a href="#" class="hero_card_link">
-                                        See all products
-                                        <i class="fa-regular fa-right-long ms-1"></i>
-                                    </a>
-                                    <a href="" class="btn hero_card_btn">
-                                        <i class="fa-solid fa-arrow-right"></i>
-                                    </a>
-                                </div>
+                    <div class="hero__cards">
+                        <div class="hero__card">
+                            <img src="img/products/hero-product1.png" alt="" class="hero_card_img">
+                            <div class="hero_card_content">
+                                <h3 class="hero_card_title">FIDO2 Keys</h3>
+                                <p class="hero_card_text">Token2 is a verified Microsoft-compatible FIDO2 security
+                                    key
+                                    vendor</p>
+                                <p class="hero_card_desc">All Token2 FIDO2 security keys listed on this page are
+                                    verified by
+                                    Microsoft as compatible with the Azure Active Directory passwordless experience.
+                                </p>
+                                <a href="#" class="hero_card_link">
+                                    See all products
+                                    <i class="fa-regular fa-right-long ms-1"></i>
+                                </a>
+                                <a href="" class="btn hero_card_btn">
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </a>
                             </div>
-                            <div class="hero__card">
-                                <img src="img/products/hero-product2.png" alt="" class="hero_card_img">
-                                <div class="hero_card_content">
-                                    <h3 class="hero_card_title">FIDO2 Keys</h3>
-                                    <p class="hero_card_text">Token2 is a verified Microsoft-compatible FIDO2 security
-                                        key
-                                        vendor</p>
-                                    <p class="hero_card_desc">All Token2 FIDO2 security keys listed on this page are
-                                        verified by
-                                        Microsoft as compatible with the Azure Active Directory passwordless experience.
-                                    </p>
-                                    <a href="#" class="hero_card_link">See all products <i
-                                            class="fa-regular fa-right-long ms-1"></i></a>
-                                    <a href="" class="btn hero_card_btn">
-                                        <i class="fa-solid fa-arrow-right"></i>
-                                    </a>
-                                </div>
+                        </div>
+                        <div class="hero__card">
+                            <img src="img/products/hero-product2.png" alt="" class="hero_card_img">
+                            <div class="hero_card_content">
+                                <h3 class="hero_card_title">FIDO2 Keys</h3>
+                                <p class="hero_card_text">Token2 is a verified Microsoft-compatible FIDO2 security
+                                    key
+                                    vendor</p>
+                                <p class="hero_card_desc">All Token2 FIDO2 security keys listed on this page are
+                                    verified by
+                                    Microsoft as compatible with the Azure Active Directory passwordless experience.
+                                </p>
+                                <a href="#" class="hero_card_link">See all products <i
+                                        class="fa-regular fa-right-long ms-1"></i></a>
+                                <a href="" class="btn hero_card_btn">
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </a>
                             </div>
-                            <div class="hero__card">
-                                <img src="img/products/hero-product3.png" alt="" class="hero_card_img">
-                                <div class="hero_card_content">
-                                    <h3 class="hero_card_title">FIDO2 Keys</h3>
-                                    <p class="hero_card_text">Token2 is a verified Microsoft-compatible FIDO2 security
-                                        key
-                                        vendor</p>
-                                    <p class="hero_card_desc">All Token2 FIDO2 security keys listed on this page are
-                                        verified by
-                                        Microsoft as compatible with the Azure Active Directory passwordless experience.
-                                    </p>
-                                    <a href="#" class="hero_card_link">See all products <i
-                                            class="fa-regular fa-right-long ms-1"></i></a>
-                                    <a href="" class="btn hero_card_btn">
-                                        <i class="fa-solid fa-arrow-right"></i>
-                                    </a>
-                                </div>
+                        </div>
+                        <div class="hero__card">
+                            <img src="img/products/hero-product3.png" alt="" class="hero_card_img">
+                            <div class="hero_card_content">
+                                <h3 class="hero_card_title">FIDO2 Keys</h3>
+                                <p class="hero_card_text">Token2 is a verified Microsoft-compatible FIDO2 security
+                                    key
+                                    vendor</p>
+                                <p class="hero_card_desc">All Token2 FIDO2 security keys listed on this page are
+                                    verified by
+                                    Microsoft as compatible with the Azure Active Directory passwordless experience.
+                                </p>
+                                <a href="#" class="hero_card_link">See all products <i
+                                        class="fa-regular fa-right-long ms-1"></i></a>
+                                <a href="" class="btn hero_card_btn">
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -168,8 +166,7 @@
                                             <i class="fa-regular fa-cart-shopping"></i>
                                         </button>
                                         <!-- Button with tooltip -->
-                                        <button
-                                            class="btn btn__square card__btn white_to_red_btn"
+                                        <button class="btn btn__square card__btn white_to_red_btn"
                                             data-bs-toggle="tooltip" data-bs-placement="bottom"
                                             data-bs-title="cannot be programmed using iPhone"
                                             data-bs-custom-class="card_btn_tooltip">
@@ -219,8 +216,7 @@
                                             <i class="fa-regular fa-cart-shopping"></i>
                                         </button>
                                         <!-- Button with tooltip -->
-                                        <button
-                                            class="btn btn__square card__btn white_to_red_btn"
+                                        <button class="btn btn__square card__btn white_to_red_btn"
                                             data-bs-toggle="tooltip" data-bs-placement="bottom"
                                             data-bs-title="cannot be programmed using iPhone"
                                             data-bs-custom-class="card_btn_tooltip">
@@ -270,8 +266,7 @@
                                             <i class="fa-regular fa-cart-shopping"></i>
                                         </button>
                                         <!-- Button with tooltip -->
-                                        <button
-                                            class="btn btn__square card__btn white_to_red_btn"
+                                        <button class="btn btn__square card__btn white_to_red_btn"
                                             data-bs-toggle="tooltip" data-bs-placement="bottom"
                                             data-bs-title="cannot be programmed using iPhone"
                                             data-bs-custom-class="card_btn_tooltip">
@@ -321,8 +316,7 @@
                                             <i class="fa-regular fa-cart-shopping"></i>
                                         </button>
                                         <!-- Button with tooltip -->
-                                        <button
-                                            class="btn btn__square card__btn white_to_red_btn"
+                                        <button class="btn btn__square card__btn white_to_red_btn"
                                             data-bs-toggle="tooltip" data-bs-placement="bottom"
                                             data-bs-title="cannot be programmed using iPhone"
                                             data-bs-custom-class="card_btn_tooltip">
@@ -372,8 +366,7 @@
                                             <i class="fa-regular fa-cart-shopping"></i>
                                         </button>
                                         <!-- Button with tooltip -->
-                                        <button
-                                            class="btn btn__square card__btn white_to_red_btn"
+                                        <button class="btn btn__square card__btn white_to_red_btn"
                                             data-bs-toggle="tooltip" data-bs-placement="bottom"
                                             data-bs-title="cannot be programmed using iPhone"
                                             data-bs-custom-class="card_btn_tooltip">
