--- a/pages/processing_orders.html
+++ b/pages/processing_orders.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <!-- styles -->
     <link rel="stylesheet" href="../main.css">
-    <link rel="stylesheet" href="../css/completed_orders.css">
+    <link rel="stylesheet" href="../css/processing_orders.css">
     <script src="../js/jquery.min.js"></script>
 </head>
 
@@ -32,7 +32,7 @@
                 });
             </script>
         </div>
-        <!--Personal Page Completed Orders  -->
+        <!--Personal Page Prosessing Orders  -->
         <main class="container">
             <div class="row float-end mb-3">
                 <div class="col d-flex">
@@ -44,7 +44,7 @@
             </div>
             <div class="row w-100">
                 <div class="col-sm-12 col-md-12 col-lg-6">
-                    <h1 class="text-white display-5 fw-bold mb-lg-5 mb-md-3 mb-2">Completed Orders</h1>
+                    <h1 class="text-white display-5 fw-bold mb-lg-5 mb-md-3 mb-2">Prosessing Orders</h1>
                     <p class="lh-lg text-white mb-lg-5 mb-md-3 mb-3" style="text-align: justify;">We have solutions that can integrate with almost any system, below
                         is the list of integration
                         guides with different systems published so far, and it is far from being exhaustive. Feel free
@@ -54,12 +54,12 @@
 
                 <!-- Personal Page Tabs -->
                 <ul class="col-12 text-white mb-lg-5 mb-md-3 mb-2 tabs">
-                    <li>
+                    <li class="active-link">
                         <a href="../pages/processing_orders.html">
                             Prosessing Orders
                         </a>
                     </li>
-                    <li class="active-link">
+                    <li>
                         <a href="../pages/completed_orders.html">
                             Completed Orders
                         </a>
@@ -114,7 +114,8 @@
                                 </b></p>
                         </div>
                         <!-- Order Progress -->
-                        <ul class="ms-lg-5 col-lg-9 col-md-12 col-sm-12 line position-relative d-flex justify-content-evenly align-items-center">
+                        <ul
+                            class="ms-lg-5 col-lg-9 col-md-12 col-sm-12 line position-relative d-flex justify-content-evenly align-items-center">
                             <li
                                 class="rounded-circle p-lg-3 p-2 text-white d-flex justify-content-center align-items-center">
                                 <i class="fs-lg-4 fs-6 fa-solid fa-check"></i>
@@ -229,7 +230,8 @@
                                 </b></p>
                         </div>
                         <!-- Order Progress -->
-                        <ul class="ms-lg-5 col-lg-9 col-md-12 col-sm-12 line position-relative d-flex justify-content-evenly align-items-center">
+                        <ul
+                            class="ms-lg-5 col-lg-9 col-md-12 col-sm-12 line-second position-relative d-flex justify-content-evenly align-items-center">
                             <li
                                 class="rounded-circle p-lg-3 p-2 text-white d-flex justify-content-center align-items-center">
                                 <i class="fs-lg-4 fs-6 fa-solid fa-check"></i>
