fix:some changes

--- a/pages/canceled_orders.html
+++ b/pages/canceled_orders.html
@@ -45,7 +45,8 @@
             <div class="row w-100">
                 <div class="col-sm-12 col-md-12 col-lg-6">
                     <h1 class="text-white display-5 fw-bold mb-lg-5 mb-md-3 mb-2">Canceled Orders</h1>
-                    <p class="lh-lg text-white mb-lg-5 mb-md-3 mb-3" style="text-align: justify;">We have solutions that can integrate with almost any system, below
+                    <p class="lh-lg text-white mb-lg-5 mb-md-3 mb-3" style="text-align: justify;">We have solutions that
+                        can integrate with almost any system, below
                         is the list of integration
                         guides with different systems published so far, and it is far from being exhaustive. Feel free
                         to contact us if you cannot find your desired product in the list below, we will check the
@@ -88,8 +89,8 @@
         <div class="container">
             <div class="row w-100 mx-auto">
                 <!-- Order N:1 -->
-                <div class="col-12 bg-white py-4 px-3 rounded mb-4 mt-encriment">
-                    <div class="row mb-4 mx-2">
+                <div class="col-12 bg-white rounded mb-4 mt-encriment p-5">
+                    <div class="row mb-4">
                         <h5 class="fw-bold">Order # 3456789</h5><!-- Order ID -->
                         <!-- Order Payment -->
                         <div class="col-lg-3 col-md-6 col-12 mb-lg-3 mb-md-2 mb-2">
@@ -103,7 +104,7 @@
                             <p>Tracking Number:<b>-</b></p>
                         </div>
                     </div>
-                    <div class="row d-flex justify-content-start align-items-center mb-5 mx-2">
+                    <div class="row d-flex justify-content-start align-items-center mb-5">
                         <!-- Buyeer -->
                         <div class="col-lg-2 col-md-12 col-12 mb-5">
                             <p>Receiver: <b>Ahmadov Chingiz,
@@ -140,7 +141,7 @@
                         </ul>
                     </div>
                     <!-- Product List -->
-                    <div class="row d-flex flex-column mx-3 mb-3">
+                    <div class="row d-flex flex-column  mb-3">
                         <!-- Table Headers -->
                         <div
                             class="col d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-light p-3 mb-2">
@@ -187,7 +188,7 @@
                         </div>
                     </div>
                     <!-- Orders Price -->
-                    <div class="row d-flex flex-column mx-3">
+                    <div class="row d-flex flex-column ">
                         <!-- Orders Total Price -->
                         <div
                             class="col d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-grey p-3 mb-1">
@@ -209,8 +210,8 @@
                     </div>
                 </div>
                 <!-- Order N:2 -->
-                <div class="col-12 bg-white py-4 px-3 rounded mb-4">
-                    <div class="row mb-4 mx-2">
+                <div class="col-12 bg-white rounded mb-4 p-5">
+                    <div class="row mb-4">
                         <h5 class="fw-bold">Order # 3456789</h5><!-- Order ID -->
                         <!-- Order Payment -->
                         <div class="col-lg-3 col-md-6 col-12 mb-lg-3 mb-md-2 mb-2">
@@ -224,7 +225,7 @@
                             <p>Tracking Number:<b>#34567890987435</b></p>
                         </div>
                     </div>
-                    <div class="row d-flex justify-content-start align-items-center mb-5 mx-2">
+                    <div class="row d-flex justify-content-start align-items-center mb-5">
                         <!-- Buyeer -->
                         <div class="col-lg-2 col-md-12 col-12 mb-5">
                             <p>Receiver: <b>Ahmadov Chingiz,
@@ -261,7 +262,7 @@
                         </ul>
                     </div>
                     <!-- Product List -->
-                    <div class="row d-flex flex-column mx-3 mb-3">
+                    <div class="row d-flex flex-column  mb-3">
                         <!-- Table Headers -->
                         <div
                             class="col d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-light p-3 mb-2">
@@ -280,7 +281,7 @@
                         </div>
                     </div>
                     <!-- Orders Price -->
-                    <div class="row d-flex flex-column mx-3">
+                    <div class="row d-flex flex-column ">
                         <!-- Orders Total Price -->
                         <div
                             class="col d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-grey p-3 mb-1">
