--- a/pages/completed_orders.html
+++ b/pages/completed_orders.html
@@ -88,8 +88,8 @@
         <div class="container">
             <div class="row w-100 mx-auto">
                 <!-- Order N:1 -->
-                <div class="col-12 bg-white py-4 px-3 rounded mb-4 mt-encriment">
-                    <div class="row mb-4 mx-2">
+                <div class="col-12 bg-white p-5 rounded mb-4 mt-encriment">
+                    <div class="row mb-4">
                         <h5 class="fw-bold">Order # 3456789</h5><!-- Order ID -->
                         <!-- Order Payment -->
                         <div class="col-lg-3 col-md-6 col-12 mb-lg-3 mb-md-2 mb-2">
@@ -103,7 +103,7 @@
                             <p>Tracking Number:<b>#34567890987435</b></p>
                         </div>
                     </div>
-                    <div class="row d-flex justify-content-start align-items-center mb-5 mx-2">
+                    <div class="row d-flex justify-content-start align-items-center mb-5">
                         <!-- Buyeer -->
                         <div class="col-lg-2 col-md-12 col-12 mb-5">
                             <p>Receiver: <b>Ahmadov Chingiz,
@@ -134,7 +134,7 @@
                         </ul>
                     </div>
                     <!-- Product List -->
-                    <div class="row d-flex flex-column mx-3 mb-3">
+                    <div class="row d-flex flex-column mb-3">
                         <!-- Table Headers -->
                         <div
                             class="col d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-light p-3 mb-2">
@@ -181,7 +181,7 @@
                         </div>
                     </div>
                     <!-- Orders Price -->
-                    <div class="row d-flex flex-column mx-3">
+                    <div class="row d-flex flex-column">
                         <!-- Orders Total Price -->
                         <div
                             class="col d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-grey p-3 mb-1">
@@ -203,8 +203,8 @@
                     </div>
                 </div>
                 <!-- Order N:2 -->
-                <div class="col-12 bg-white py-4 px-3 rounded mb-4">
-                    <div class="row mb-4 mx-2">
+                <div class="col-12 bg-white p-5 rounded mb-4">
+                    <div class="row mb-4">
                         <h5 class="fw-bold">Order # 3456789</h5><!-- Order ID -->
                         <!-- Order Payment -->
                         <div class="col-lg-3 col-md-6 col-12 mb-lg-3 mb-md-2 mb-2">
@@ -218,7 +218,7 @@
                             <p>Tracking Number:<b>#34567890987435</b></p>
                         </div>
                     </div>
-                    <div class="row d-flex justify-content-start align-items-center mb-5 mx-2">
+                    <div class="row d-flex justify-content-start align-items-center mb-5">
                         <!-- Buyeer -->
                         <div class="col-lg-2 col-md-12 col-12 mb-5">
                             <p>Receiver: <b>Ahmadov Chingiz,
@@ -249,7 +249,7 @@
                         </ul>
                     </div>
                     <!-- Product List -->
-                    <div class="row d-flex flex-column mx-3 mb-3">
+                    <div class="row d-flex flex-column mb-3">
                         <!-- Table Headers -->
                         <div
                             class="col d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-light p-3 mb-2">
@@ -268,7 +268,7 @@
                         </div>
                     </div>
                     <!-- Orders Price -->
-                    <div class="row d-flex flex-column mx-3">
+                    <div class="row d-flex flex-column">
                         <!-- Orders Total Price -->
                         <div
                             class="col d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-grey p-3 mb-1">
